# node.vs.rust

./: .gitignore
benchmark/: bench.sh  config_node  config_rust  template.plot
benchmark/data/: post.json  post.lua  put.json  put.lua
node-server/: package.json
node-server/src/: server.js
node-server/src/models/: news.js
node-server/src/routers/: index.js
rust-server/: .env  Cargo.toml
rust-server/migrations/20161020032820_create_news/: down.sql  up.sql
rust-server/src/: database.rs  json_models.rs  main.rs  models.rs  schema.rs
