[package]
name = "rust-server"
version = "0.1.0"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]

[dependencies]
lazy_static = "*"
iron = "*"
router = "*"
hyper = "*"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
chrono = { version = "0.2", features = ["rustc-serialize"]}
diesel = { version = "0.8", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.8", features = ["postgres"] }
dotenv = "*"
r2d2 = "0.7.0"
r2d2-diesel = "0.8.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'