[package]
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
name = "rust-server"
version = "0.1.0"

[dependencies]
dotenv = "0.10"
futures-await = "0.1"
futures-cpupool = "0.1"
hyper = "0.11"
r2d2 = "0.8"
r2d2-diesel = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.diesel]
features = ["postgres", "chrono"]
version = "1.1"

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false
