[package]
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
name = "rust-server"
version = "0.1.0"

[dependencies]
dotenv = "0.10"
r2d2 = "0.8"
r2d2-diesel = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
num_cpus = "1.8.0"


[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.diesel]
features = ["postgres", "chrono"]
version = "1.1"

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false
